--- a/app/views/admin/memberships/index.html.erb
+++ b/app/views/admin/memberships/index.html.erb
@@ -1,15 +1,41 @@
-<%
-  content_for :javascripts do
-    javascript_include_tag 'membership.jquery.js'
-  end
-  
-  content_for :stylesheets do
-    stylesheet_link_tag 'membership'
-  end
-%>
-<div id="memberships">
-  <ul>
-    <li><a href="/refinery/page_roles"><span>Pages</span></a></li>
-    <li><a href="/refinery/user_roles"><span>Users</span></a></li>
-  </ul>
+<%content_for :stylesheets do
+  stylesheet_link_tag ['membership', 'demo_table', 'demo_page']
+end%>
+<div id="membership-wrapper" style="display:none">
+  <div id="tabs" class="clearfix">
+    <ul>
+      <li><a href="#user_roles"><span>Members</span></a></li>
+      <li><a href="#page_roles"><span>Pages</span></a></li>
+    </ul>
+  </div>
+  <div id="user_roles"><%= render :partial => 'user_roles',
+        :locals => {:members => @members} %></div>
+  <div id="page_roles">
+    <%=  render :partial => 'page_roles',
+            :layout => false,
+            :locals => {
+              :pages => @pages,
+              :roles => @roles
+            }
+    %>
+  </div>
 </div>
+
+<%content_for :javascripts do
+  javascript_include_tag ['jquery.dataTables.min.js', 'membership.jquery.js']
+end%>
+
+<%content_for :javascripts do%>
+  <script type="text/javascript">
+    $(function() {
+      $("#tabs").tabs();
+    });
+  </script>
+  <% columns = [{}, {}, {}, {}, {}, {:sortable => false}, {:sortable => false}, {:sortable => false}] %>
+  <%= datatable(columns, :per_page=> 25, :ajax_source => admin_memberships_path, :auto_width => false ).html_safe %>
+  <script type="text/javascript">
+    $(function() {
+      $('#membership-wrapper').show();
+    });
+  </script>
+<%end%>
