Custom warden failure class to redirect to /members/login on login failure

--- a/app/views/members/_login_form.html.erb
+++ b/app/views/members/_login_form.html.erb
@@ -10,5 +10,6 @@
 <p>
   <%= f.submit t('.login')%>
 </p>
-<%= hidden_field_tag :redirect, params[:redirect]%>
+<%= hidden_field_tag :redirect, params[:redirect] %>
+<%= hidden_field_tag :member_login, true %>
 <% end %>
