--- a/app/views/members/login.html.erb
+++ b/app/views/members/login.html.erb
@@ -1,7 +1,8 @@
 <% content_for :body_content_left do %>
-  <%=raw @page['body_above'.to_sym] if @page %>
+  <%=raw @page[:body_above] if @page %>
   <%= render :partial => 'login_form' %>
   <%=raw @page['body_below'.to_sym]  if @page %>
+  <%=raw @page[:body_below] if @page %>
 <% end %>
 
-<%= render :partial => "/shared/content_page" %>
+<%= render :partial => "/shared/content_page", :hide_sections => [:body_below, :body_above] %>
