--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,22 +1,11 @@
 <% content_for :body_content_left do %>
   <%=raw @page[:body_above] if @page %>
   <div id="new_member_form">
-    <%= form_for @member, :as => :member, :url => members_path(:p => params[:p]) do |f| %>
-      <%= render :partial => "error_messages",
-        :locals => {
-        :object => @member,
-        :include_object_name => true
-      } %>      
-
-      <div id="member">
-        <%= render :partial => "form_account", :locals => {:f => f} %>
-        <%= render :partial => "form_profile", :locals => {:f => f} %>
-        <%= render :partial => "form_organization", :locals => {:f => f} %>
-        <%= render :partial => "form_actions", :locals => {:f => f} %>          
-      </div>
-    <%end%>
+    <%= render :partial => 'form',
+      :locals => {
+      :url => members_path }%>
   </div>
   <%=raw @page[:body_below] if @page %>
 <% end %>
 
-<%= render :partial => "/shared/content_page" %>
+<%= render :partial => "/shared/content_page", :hide_sections => [:body_below, :body_above] %>
