Do not create a useless form

--- a/app/views/members/_static_account.html.erb
+++ b/app/views/members/_static_account.html.erb
@@ -2,7 +2,7 @@
   <legend><%=t('members.shared.account')%></legend>
   <ol>
     <li>
-      <%= f.label :email %>
+      <label><%= @member.class.human_attribute_name :email %></label>
       <%= @member.email %>&nbsp;
     </li>
   </ol>
