--- a/app/views/members/_static_organization.html.erb
+++ b/app/views/members/_static_organization.html.erb
@@ -2,27 +2,27 @@
   <legend><%=t('members.shared.organization')%></legend>
   <ol>
     <li>
-      <%= f.label :organization %>
+      <label><%= @member.class.human_attribute_name :organization %></label>
       <%= @member.organization %>&nbsp;
     </li>
     <li>
-      <%= f.label :street_address %>
+      <label><%= @member.class.human_attribute_name :street_address %></label>
       <%= @member.street_address %>&nbsp;
     </li>
     <li>
-      <%= f.label :city %>
+      <label><%= @member.class.human_attribute_name :city %></label>
       <%= @member.city %>&nbsp;
     </li>
     <li>
-      <%= f.label :province %>
+      <label><%= @member.class.human_attribute_name :province %></label>
       <%= @member.province %>&nbsp;
     </li>
     <li>
-      <%= f.label :postal_code %>
+      <label><%= @member.class.human_attribute_name :postal_code %></label>
       <%= @member.postal_code %>&nbsp;
     </li>
     <li>
-      <%= link_to f.label(:website), @member.website if @member.website %>
+      <%= link_to @member.class.human_attribute_name(:website), @member.website if @member.website %>
     </li>
   </ol>
 </fieldset>
