--- a/app/views/members/_static_profile.html.erb
+++ b/app/views/members/_static_profile.html.erb
@@ -2,27 +2,27 @@
   <legend><%=t('members.shared.profile')%></legend>
   <ol>
     <li>
-      <%= f.label :first_name %>
+      <label><%= @member.class.human_attribute_name :first_name %></label>
       <%= @member.first_name %>&nbsp;
     </li>
     <li>
-      <%= f.label :last_name %>
+      <label><%= @member.class.human_attribute_name :last_name %></label>
       <%= @member.last_name %>&nbsp;
     </li>
     <li>
-      <%= f.label :title %>
+      <label><%= @member.class.human_attribute_name :title %></label>
       <%= @member.title %>&nbsp;
     </li>
     <li>
-      <%= f.label :phone %>
+      <label><%= @member.class.human_attribute_name :phone %></label>
       <%= @member.phone %>&nbsp;
     </li>
     <li>
-      <%= f.label :fax %>
+      <label><%= @member.class.human_attribute_name :fax %></label>
       <%= @member.fax %>&nbsp;
     </li>
     <li>
-      <%= f.label :membership_level %>
+      <label><%= @member.class.human_attribute_name :membership_level %></label>
       <%= @member.membership_level %>&nbsp;
     </li>
     
