Use shared/content_page to render the view, wrap the form between :page_above and :page_below

--- a/app/views/members/edit.html.erb
+++ b/app/views/members/edit.html.erb
@@ -1,18 +1,12 @@
-<div id="left_col">
-  <%= render :partial => "/shared/menu" -%>
-</div>
-<div id="right_col">
-  <%=raw @page[:right_body] if @page %>
-</div>
-<div id="page_content">
-  <%=raw @page[:middle_body] if @page %>
+<% content_for :body_content_left do %>
+  <%=raw @page[:body_above] if @page %>
   <div id="edit-member-form">
     <%= render :partial => 'form',
       :locals => {
-      :url => {
-        :action=>"update",
-        :controller=>"members",
-        :id => @member.id
-      }}%>
+      :url => members_path }%>
   </div>
-</div>
+  <%=raw @page[:body_below] if @page %>
+<% end %>
+
+<%= render :partial => "/shared/content_page", :hide_sections => [:body_below, :body_above] %>
+
