--- a/app/views/members/login.html.erb
+++ b/app/views/members/login.html.erb
@@ -1,5 +1,6 @@
 <% content_for :body_content_left do %>
   <%=raw @page[:body_above] if @page %>
+  <%= render :partial => 'message' %>
   <%= render :partial => 'login_form' %>
   <%=raw @page['body_below'.to_sym]  if @page %>
   <%=raw @page[:body_below] if @page %>
