Remove pages roles tab from memberships page

--- a/app/views/admin/memberships/index.html.erb
+++ b/app/views/admin/memberships/index.html.erb
@@ -5,21 +5,15 @@ end%>
   <div id="page-tabs" class="clearfix ui-tabs ui-widget ui-widget-content ui-corner-all">
     <ul id="page_parts" class="ui-tabs-nav ui-helper-reset ui-helper-clearfix ui-widget-header ui-corner-all">
       <li><a href="#user_roles"><span><%= t('.members') %></span></a></li>
-      <li><a href="#page_roles"><span><%= t('.pages') %></span></a></li>
+      <li><a href="#roles"><span><%= t('.roles') %></span></a></li>
     </ul>
     
     <div id="page_part_editors">
       <div id="user_roles" class="page_part ui-tabs-panel ui-widget-content ui-corner-bottom wym_box wym_skin_refinery">
         <%= render :partial => 'user_roles', :locals => {:members => @members} %>
       </div>
-      <div id="page_roles" class="page_part ui-tabs-panel ui-widget-content ui-corner-bottom wym_box wym_skin_refinery">
-        <%=  render :partial => 'page_roles',
-        :layout => false,
-        :locals => {
-          :pages => @pages,
-          :roles => @roles
-        }
-        %>
+      <div id="roles" class="page_part ui-tabs-panel ui-widget-content ui-corner-bottom wym_box wym_skin_refinery">
+        <%=  render :partial => 'roles' %>
       </div>
     </div>
   </div>
