--- a/app/views/admin/roles/_actions.html.erb
+++ b/app/views/admin/roles/_actions.html.erb
@@ -8,4 +8,11 @@
                                                          :height => 300),
                 :class => "add_icon" %>
   </li>
+  
+  <li>
+    <%= link_to t('.members_administration'), admin_memberships_path %>
+  </li>
+  <li>
+    <%= link_to t('.emails_administration'), admin_membership_emails_path %>
+  </li>
 </ul>
