New admin page structure, Stub members controller, Roles controller, New grid

--- a/app/views/admin/memberships/_member.html.erb
+++ b/app/views/admin/memberships/_member.html.erb
@@ -3,16 +3,28 @@
   <td><%= member.organization %></td>
   <td><%= member.email %></td>
   <td><%= member.created_at.strftime('%d/%m/%Y') %></td>
-  <td><%= member.member_until.nil? ? '--' : member.member_until.strftime('%d/%m/%Y') %></td>
-  <td><%= member.active? ? 'member' : '--' %></td>
-  <td>    
-          <%= link_to refinery_icon_tag('application_edit.png'), edit_admin_member_path(member),
-                      :title => t('edit', :scope => 'admin.members'), 
-                      :dialog => true, :width => 300, :height => 200 %>
-          <%= link_to refinery_icon_tag('delete.png'), admin_member_path(member),
-                      :class => "cancel confirm-delete",
-                      :title => t('delete', :scope => 'admin.members'),
-                      :confirm => t('message', :scope => 'shared.admin.delete', :title => member.title),
-                      :method => :delete %>
+  <!--<td><%= member.member_until.nil? ? '--' : member.member_until.strftime('%d/%m/%Y') %></td>
+  <td><%= member.active? ? 'member' : '--' %></td>-->
+  <td>
+    <span style="white-space:nowrap">
+    <% if member.active? %>
+      <%= link_to refinery_icon_tag('date_add.png'), extend_admin_membership_path(member),
+        :title => t('edit', :scope => 'admin.members') %>
+      <%= link_to refinery_icon_tag('thumb_down.png'), cancel_admin_membership_path(member),
+        :title => t('edit', :scope => 'admin.members') %>
+    <% else %>
+      <%= link_to refinery_icon_tag('thumb_up.png'), accept_admin_membership_path(member),
+        :title => t('edit', :scope => 'admin.members') %>
+      <%= link_to refinery_icon_tag('thumb_down.png'), reject_admin_membership_path(member),
+        :title => t('edit', :scope => 'admin.members') %>
+    <% end %>
+    <%= link_to refinery_icon_tag('application_edit.png'), edit_admin_member_path(member),
+      :title => t('edit', :scope => 'admin.members') %>
+    <%= link_to refinery_icon_tag('delete.png'), admin_member_path(member),
+      :class => "cancel confirm-delete",
+      :title => t('delete', :scope => 'admin.members'),
+      :confirm => t('message', :scope => 'shared.admin.delete', :title => member.title),
+      :method => :delete %>
+    </span>
   </td>
 </tr>
