--- a/app/views/admin/memberships/_members.html.erb
+++ b/app/views/admin/memberships/_members.html.erb
@@ -1,13 +1,13 @@
 <%= will_paginate @members %>
-<table id="members" cellpadding="0" cellspacing="0" style="display: inline" class="datatable ">
+<table id="members" cellpadding="0" cellspacing="0" style="visibility: hidden; width: 650px;">
   <thead>
     <tr>
-      <th align="center">Name</th>
-      <th align="center">Organization</th>
-      <th align="center">Email</th>
-      <th align="center">Added</th>
-      <th align="center">Expires</th>
-      <th align="center">Status</th>
+      <th align="center"><%= Member.human_attribute_name :name %></th>
+      <th align="center"><%= Member.human_attribute_name :organization %></th>
+      <th align="center"><%= Member.human_attribute_name :email %></th>
+      <th align="center"><%= Member.human_attribute_name :created_at %></th>
+      <!--<th align="center"><%= Member.human_attribute_name :member_until %></th>
+      <th align="center"><%= Member.human_attribute_name :active %></th>-->
       <th align="center"></th>
     </tr>
   </thead>
