--- a/app/views/admin/memberships/index.html.erb
+++ b/app/views/admin/memberships/index.html.erb
@@ -1,4 +1,5 @@
-<div id='records'>
+<h2><%= t('.new_members')%></h2>
+<div id='records' class="pagination_container">
   <%= render :partial => 'members' %>
 </div>
 <div id='actions'>
@@ -7,4 +8,13 @@
 
 <% content_for :stylesheets do %>
   <%= stylesheet_link_tag ['membership'] %>
+<% end %>
+
+<% content_for :javascripts do %>
+  <%= javascript_include_tag ['jquery.cookie.js', 'membership.jquery.js','jquery.event.drag-2.0.min.js', 'slick.core.js', 'slick.grid.js'] %>
+  <script>
+  $(function(){
+    $("#members").slickGrid();
+  });
+</script>
 <% end %>
