--- a/app/views/admin/roles/_role.html.erb
+++ b/app/views/admin/roles/_role.html.erb
@@ -3,9 +3,8 @@
           <%= role.title %>
         </span>
         <span class='actions'>
-          <%= link_to refinery_icon_tag('application_edit.png'), edit_admin_role_path(role),
-                      :title => t('edit', :scope => 'admin.roles'), 
-                      :dialog => true, :width => 300, :height => 200 %>
+          <%= link_to refinery_icon_tag('application_edit.png'), edit_admin_role_path(role, :dialog => true, :width => 500, :height => 300),
+                      :title => t('edit', :scope => 'admin.roles') %>
           <%= link_to refinery_icon_tag('delete.png'), admin_role_path(role),
                       :class => "cancel confirm-delete",
                       :title => t('delete', :scope => 'admin.roles'),
