More work on user management, activation fields in user table, admin/members#edit action

--- a/app/views/admin/members/index.html.erb
+++ b/app/views/admin/members/index.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t('new_members', :scope => 'admin.memberships')%></h2>
+<h2><%= t('members_administration', :scope => 'admin.memberships')%></h2>
 <div id='records' class="pagination_container">
   <%= render :partial => 'members' %>
 </div>
