--- a/app/views/admin/memberships/_member.html.erb
+++ b/app/views/admin/memberships/_member.html.erb
@@ -6,18 +6,13 @@
   <!--<td><%= member.member_until.nil? ? '--' : member.member_until.strftime('%d/%m/%Y') %></td>
   <td><%= member.active? ? 'member' : '--' %></td>-->
   <td>
-    <span style="white-space:nowrap">
-    <% if member.active? %>
-      <%= link_to refinery_icon_tag('date_add.png'), extend_admin_member_path(member),
-        :title => t('edit', :scope => 'admin.members') %>
-      <%= link_to refinery_icon_tag('thumb_down.png'), cancel_admin_member_path(member),
-        :title => t('edit', :scope => 'admin.members') %>
-    <% else %>
-      <%= link_to refinery_icon_tag('thumb_up.png'), accept_admin_member_path(member),
-        :title => t('edit', :scope => 'admin.members') %>
-      <%= link_to refinery_icon_tag('thumb_down.png'), reject_admin_member_path(member),
-        :title => t('edit', :scope => 'admin.members') %>
-    <% end %>
+    <span style="white-space:nowrap" class="row_actions">
+    
+    <%= link_to refinery_icon_tag('thumb_up.png'), accept_admin_member_path(member),
+      :title => t('accept', :scope => 'admin.members'), :class => 'accept' if member.is_new %>
+    <%= link_to refinery_icon_tag('thumb_down.png'), reject_admin_member_path(member),
+      :title => t('reject', :scope => 'admin.members'), :class => 'reject' %>
+    
     <%= link_to refinery_icon_tag('application_edit.png'), edit_admin_member_path(member),
       :title => t('edit', :scope => 'admin.members') %>
     <%= link_to refinery_icon_tag('delete.png'), admin_member_path(member),
