--- a/app/views/admin/memberships/_actions.html.erb
+++ b/app/views/admin/memberships/_actions.html.erb
@@ -1,6 +1,9 @@
 <ul>
   <li>
-    <%= render :partial => "/shared/admin/search", :locals => {:url => admin_roles_url} %>
+    <%= render :partial => "/shared/admin/search", :locals => {:url => admin_memberships_url} %>
+  </li>
+  <li>
+    <%= link_to t('.members_administration'), admin_members_path %>
   </li>
   <li>
     <%= link_to t('.roles_administration'), admin_roles_path %>
