Menu icons, shared partial

--- a/app/views/admin/membership_emails/index.html.erb
+++ b/app/views/admin/membership_emails/index.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <div id='actions'>
-  <%= render :partial => 'actions' %>
+  <%= render :partial => '/admin/shared/memberships_actions' %>
 </div>
 
 <% content_for :javascripts do %>
