--- a/app/views/admin/memberships/index.html.erb
+++ b/app/views/admin/memberships/index.html.erb
@@ -3,11 +3,11 @@
   <%= render :partial => 'members' %>
 </div>
 <div id='actions'>
-  <%= render :partial => 'actions' %>
+  <%= render :partial => '/admin/shared/memberships_actions' %>
 </div>
 
 <% content_for :stylesheets do %>
-  <%= stylesheet_link_tag ['membership'] %>
+  <%= stylesheet_link_tag ['members_grid'] %>
 <% end %>
 
 <% content_for :javascripts do %>
