--- a/app/views/admin/roles/index.html.erb
+++ b/app/views/admin/roles/index.html.erb
@@ -2,5 +2,5 @@
   <%= render :partial => 'records' %>
 </div>
 <div id='actions'>
-  <%= render :partial => 'actions' %>
+  <%= render :partial => '/admin/shared/memberships_actions' %>
 </div>
