--- a/app/views/admin/membership_emails/_emails.html.erb
+++ b/app/views/admin/membership_emails/_emails.html.erb
@@ -1,4 +1,4 @@
 
     <ul class="<%= ['pagination_frame', pagination_css_class].compact.join(' ') %>">
-      <%= render :partial => "email", :collection => membership_emails %> 
+      <%= render :partial => "email", :collection => @membership_emails %> 
     </ul>
