--- a/app/views/admin/members/_form_activation.html.erb
+++ b/app/views/admin/members/_form_activation.html.erb
@@ -1,19 +1,21 @@
 <fieldset id="member_activation_form" class="clearfix">
-  <legend><%=t('members.shared.activation')%></legend>  
+  <legend><%=t('activation', :scope => 'admin.members')%></legend>  
   
   <p class="field">
     <%= f.check_box :enabled %>
-    <%= f.label :enabled %>
+    <%= f.label :enabled, t('user_can_login', :scope => 'admin.members') %>
   </p>
   <% if RefinerySetting::find_or_set('memberships_timed_accounts', true) %>
   <p class="field">
   <span>
     <% if f.object.member_until %>
-      <%= t('.member_until')%> <b><%= f.object.member_until.strftime('%d/%m/%Y') %></b>
-      <%= t('.extend_membership_by')%> <%= f.select :add_to_member_until, [[]]+(1..10).collect{|n| [t('years', :count => n), n]} %>
+      <%= t('member_until', :scope => 'admin.members') if @member.member_until.future? %> 
+      <%= t('membership_expired', :scope => 'admin.members') if @member.member_until.past? %> 
+      <b><%= f.object.member_until.strftime('%d/%m/%Y') %></b><br />
+      <%= t('extend_membership_for', :scope => 'admin.members')%> <%= f.select :add_to_member_until, [[]]+(1..10).collect{|n| [t('years', :count => n), n]} %>
     <% else %>
-      <%= t('.not_yet_member')%> 
-      <%= t('.make_member_for')%> <%= f.select :add_to_member_until, [[]]+(1..10).collect{|n| [t('years', :count => n), n]} %>
+    <b><%= t('not_yet_member', :scope => 'admin.members')%></b><br />
+      <%= t('activate_member_for', :scope => 'admin.members')%> <%= f.select :add_to_member_until, [[]]+(1..10).collect{|n| [t('years', :count => n), n]} %>
     <% end %>
   </span>
   </p>
