--- a/app/views/admin/members/_form_organization.html.erb
+++ b/app/views/admin/members/_form_organization.html.erb
@@ -1,5 +1,5 @@
 <fieldset id="member_organization_form">
-  <legend><%=t('members.shared.organization')%></legend>
+  <legend><%=t('organization', :scope => 'admin.members')%></legend>
   
   <p class="field">
       <%= f.label :organization %>
