--- a/app/views/admin/members/_members.html.erb
+++ b/app/views/admin/members/_members.html.erb
@@ -20,6 +20,6 @@
 </table>
 <% else %>
 <p>
-<%= t('.no_members')%>
+  <strong><%= t('no_members_yet', :scope => 'admin.members')%></strong>
 </p>
 <% end %>
