--- a/app/views/admin/membership_emails/index.html.erb
+++ b/app/views/admin/membership_emails/index.html.erb
@@ -1,4 +1,4 @@
-<h2><%= t('emails_administration', :scope => 'admin.memberships')%></h2>
+<h2><%= t('emails_administration', :scope => 'admin.membership_emails')%></h2>
 <div id='records'>
   <%= render :partial => 'records' %>
 </div>
