--- a/public/stylesheets/memberships.css
+++ b/public/stylesheets/memberships.css
@@ -10,3 +10,6 @@
 .roles_icon {  
   background-image: url('/images/refinery/icons/group.png');
 }
+.options_icon {  
+  background-image: url('/images/refinery/icons/cog_edit.png');
+}
