--- a/app/views/admin/membership_emails/_email.html.erb
+++ b/app/views/admin/membership_emails/_email.html.erb
@@ -1,6 +1,6 @@
 <li class='clearfix record <%= cycle("on", "on-hover") %>'>
   <span class='title'>
-    <%= email.title.titleize %>
+    <%= t(email.title, :scope => 'admin.membership_emails') %>
     <% if defined?(::Refinery::I18n) and ::Refinery::I18n.frontend_locales.many? and
     (locales = email.translations.collect{|t| t.locale}).present? %>
     <span class='preview'>
