--- a/app/views/admin/memberships/_member.html.erb
+++ b/app/views/admin/memberships/_member.html.erb
@@ -18,7 +18,7 @@
     <%= link_to refinery_icon_tag('delete.png'), admin_member_path(member),
       :class => "cancel confirm-delete",
       :title => t('delete', :scope => 'admin.members'),
-      :confirm => t('message', :scope => 'shared.admin.delete', :title => member.title),
+      :confirm => t('message', :scope => 'shared.admin.delete', :title => member.full_name),
       :method => :delete %>
     </span>
   </td>
