--- a/app/views/admin/memberships/_members.html.erb
+++ b/app/views/admin/memberships/_members.html.erb
@@ -18,6 +18,6 @@
 </table>
 <% else %>
 <p>
-<%= t('.no_new_members')%>
+  <strong><%= t('no_new_members', :scope => 'admin.memberships')%></strong>
 </p>
 <% end %>
