--- a/app/views/admin/roles/_form.html.erb
+++ b/app/views/admin/roles/_form.html.erb
@@ -15,9 +15,18 @@
              :locals => {
                :f => f,
                :continue_editing => false,
-               :hide_cancel => (@app_dialog or action_name == "insert" or from_dialog?),
+               :hide_cancel => false,
+               :hide_delete => (@role.new_record?),
                :delete_title => t('delete', :scope => 'admin.roles'),
                :delete_confirmation => (t('message', :scope => 'shared.admin.delete',
                                         :title => @role.title) if @role.persisted?)
                                       } %>
 <% end -%>
+
+<% content_for :javascripts do %>
+<script>
+$(function(){
+  $('.form-actions-dialog #cancel_button').not('.wym_iframe_body .form-actions-dialog #cancel_button').click(close_dialog);
+});
+</script
+<% end %>
