--- a/app/views/admin/roles/_records.html.erb
+++ b/app/views/admin/roles/_records.html.erb
@@ -8,7 +8,7 @@
 <% else %>
   <p>
     <% unless searching? %>
-      <strong><%= t('.no_files_yet') %></strong>
+      <strong><%= t('no_roles_yet', :scope => 'admin.roles') %></strong>
     <% else %>
       <%= t('no_results', :scope => 'shared.admin.search') %>
     <% end %>
