--- a/app/views/admin/roles/index.html.erb
+++ b/app/views/admin/roles/index.html.erb
@@ -1,3 +1,4 @@
+<h2><%= t('roles_administration', :scope => 'admin.roles')%></h2>
 <div id='records'>
   <%= render :partial => 'records' %>
 </div>
