--- a/app/views/admin/shared/_memberships_actions.html.erb
+++ b/app/views/admin/shared/_memberships_actions.html.erb
@@ -2,11 +2,19 @@
   <li>
     <%= render :partial => "/shared/admin/search", :locals => {:url => send("admin_#{params[:controller].gsub(/^admin\//, '')}_url")} %>
   </li>
+  
   <% if params[:controller] == 'admin/roles' %>
   <li>
-    <%= link_to t('.new_role'), new_admin_role_url(:dialog => true, :width => 500, :height => 300), :class => "add_icon" %>
+    <%= link_to t('new_role', :scope => 'admin.roles'), new_admin_role_url(:dialog => true, :width => 500, :height => 300), :class => "add_icon" %>
   </li> 
   <% end %>
+  
+  <% if params[:controller] == 'admin/membership_emails' %>
+  <li>
+    <%= link_to t('email_settings', :scope => 'admin.membership_emails'), settings_admin_membership_emails_path(:dialog => true, :width => 650, :height => 400), :class => "options_icon" %>
+  </li> 
+  <% end %>
+  
   <% unless params[:controller] == 'admin/memberships' %>
   <li>
     <%= link_to t('new_members', :scope => 'admin.memberships'), admin_memberships_path, :class => "new_members_icon" %>
@@ -14,17 +22,17 @@
   <% end %>
   <% unless params[:controller] == 'admin/members' %>
   <li>
-    <%= link_to t('members_administration', :scope => 'admin.memberships'), admin_members_path, :class => "members_icon" %>
+    <%= link_to t('members_administration', :scope => 'admin.members'), admin_members_path, :class => "members_icon" %>
   </li>
   <% end %>
   <% unless params[:controller] == 'admin/membership_emails' %>
   <li>
-    <%= link_to t('emails_administration', :scope => 'admin.memberships'), admin_membership_emails_path, :class => "email_icon" %>
+    <%= link_to t('emails_administration', :scope => 'admin.membership_emails'), admin_membership_emails_path, :class => "email_icon" %>
   </li>
   <% end %>
   <% unless params[:controller] == 'admin/roles' %>
   <li>
-    <%= link_to t('roles_administration', :scope => 'admin.memberships'), admin_roles_path, :class => "roles_icon" %>
+    <%= link_to t('roles_administration', :scope => 'admin.roles'), admin_roles_path, :class => "roles_icon" %>
   </li>
   <% end %>
 </ul>
