Common email parts administration

--- a/app/views/admin/membership_emails/index.html.erb
+++ b/app/views/admin/membership_emails/index.html.erb
@@ -1,6 +1,9 @@
-<h2><%= t('emails_administration', :scope => 'admin.membership_emails')%></h2>
 <div id='records'>
+  <h2><%= t('emails_administration', :scope => 'admin.membership_emails')%></h2>
   <%= render :partial => 'records' %>
+  <br />
+  <h2><%= t('shared_email_parts', :scope => 'admin.membership_emails')%></h2>
+  <%= render :partial => 'parts' %>
 </div>
 
 <div id='actions'>
@@ -12,15 +15,15 @@
 (function($){
 $.fn.applyMinimumHeightFromChildren = function() {
   $(this).each(function(){
+    var child_heights = 0;
     $(this).children().each(function(i, child){
-      child_heights = 0;
       child_heights += $(child).height();
       $.each(['marginTop', 'marginBottom', 'paddingTop', 'paddingBottom'], function(i, attr) {
         child_heights += (parseInt($(child).css(attr)) || 0);
       });
     });
+    $(this).css('min-height', child_heights);
   });
-  $(this).css('min-height', child_heights);
   return $(this);
 }
 })(jQuery);
