--- a/app/views/admin/membership_email_parts/_form.html.erb
+++ b/app/views/admin/membership_email_parts/_form.html.erb
@@ -1,9 +1,9 @@
-<h2><%= MembershipEmail.model_name.human %>: <%= t(@membership_email.title, :scope => 'membership_emails') %></h2>
-<%= form_for [:admin, @membership_email], :url => @url_override || @url do |f| -%>
+<h2><%= MembershipEmailPart.model_name.human %>: <%= t(@membership_email_part.title, :scope => 'membership_email_parts') %></h2>
+<%= form_for [:admin, @membership_email_part], :url => @url_override || @url do |f| -%>
 
   <%= render :partial => "/shared/admin/error_messages",
              :locals => {
-               :object => @membership_email,
+               :object => @membership_email_part,
                :include_object_name => false
              } %>
 
@@ -12,11 +12,6 @@
                :current_locale => Thread.current[:globalize_locale]
              } if defined?(::Refinery::I18n) %>
 
-  <div class="field">
-    <%= f.label :subject %>
-    <%= f.text_field :subject, :class => "larger widest" %>
-  </div>
-  
   <%= render :partial => "body_field", :locals => {:f => f} %>
 
   <%= render :partial => "/shared/admin/form_actions",
