--- a/app/views/admin/membership_emails/_form.html.erb
+++ b/app/views/admin/membership_emails/_form.html.erb
@@ -1,4 +1,4 @@
-<h2><%= MembershipEmail.model_name.human %>: <%= t(@membership_email.title, :scope => 'membership_emails') %></h2>
+<h2><%= MembershipEmail.model_name.human %>: <%= t(@membership_email.title, :scope => 'admin.membership_emails') %></h2>
 <%= form_for [:admin, @membership_email], :url => @url_override || @url do |f| -%>
 
   <%= render :partial => "/shared/admin/error_messages",
@@ -18,6 +18,8 @@
   </div>
   
   <%= render :partial => "body_field", :locals => {:f => f} %>
+  
+  <%= render :partial => "email_body_help" %>
 
   <%= render :partial => "/shared/admin/form_actions",
              :locals => {
