fixed the monkeypatch and added a submit button to the membership signup

--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -70,6 +70,7 @@
             </li>
           </ol>
         </fieldset>
+       <div id='submit'> <%= f.submit %> </div>
       </div>
     <%end%>
   </div>
