removed the requirements for the province and updated readme to fix omissions

--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -56,10 +56,12 @@
               <%= f.label :city %>
               <%= f.text_field :city %>&nbsp;
             </li>
+            <!--
             <li>
-              <%= f.label :province %>
-              <%= f.select :province, options_for_select(Provinces::CODES) %>
+              <%#= f.label :province %>
+              <%#= f.select :province, options_for_select(Provinces::CODES) %>
             </li>
+            -->
             <li>
               <%= f.label :postal_code %>
               <%= f.text_field :postal_code %>&nbsp;
