--- a/app/views/admin/members/_members.html.erb
+++ b/app/views/admin/members/_members.html.erb
@@ -9,13 +9,13 @@
       <th align="center" class="sortable"><%= Member.human_attribute_name :created_at %></th>
       <% if RefinerySetting::find_or_set('memberships_timed_accounts', true) %>
       <th align="center" class="sortable"><%= Member.human_attribute_name :member_until %></th>
-      <th align="center" class="sortable width_35"><%= Member.human_attribute_name :status %></th>
       <% end %>
+      <th align="center" class="sortable width_35"><%= Member.human_attribute_name :status %></th>
       <th align="center" class="width_80"></th>
     </tr>
   </thead>
   <tbody>
-    <%= render :partial => 'member', :collection => @members if @members %>
+    <%= render :partial => 'admin/members/member', :collection => @members if @members %>
   </tbody>
 </table>
 <% else %>
