--- a/app/views/admin/memberships/settings.html.erb
+++ b/app/views/admin/memberships/settings.html.erb
@@ -1,7 +1,15 @@
-<div class='clearfix dialog_email_settings'>
+<div class='clearfix dialog_memberships_settings'>
   <div id="dialog_menu_left">
+    <span id="on_registration_radio" class="radio">
+      <input type="radio" name="settings_page" value="signup_settings" id="page_on_registration" checked="true">
+      <label for="page_on_registration" class="stripped"><%= t('signup_defaults', :scope => 'admin.memberships.settings') %></label>
+    </span>
+    <span id="default_groups_radio" class="radio">
+      <input type="radio" name="settings_page" value="default_groups" id="page_default_groups">
+      <label for="page_default_groups" class="stripped"><%= t('default_groups', :scope => 'admin.memberships.settings') %></label>
+    </span>
     <span id="email_delivery_radio" class="radio">
-      <input type="radio" name="settings_page" value="email_delivery" id="page_email_delivery" checked="true">
+      <input type="radio" name="settings_page" value="email_delivery" id="page_email_delivery">
       <label for="page_email_delivery" class="stripped"><%= t('email_delivery', :scope => 'admin.membership_emails.settings') %></label>
     </span>
     <span id="admin_notifications_radio" class="radio">
@@ -10,8 +18,10 @@
     </span>
   </div>
   
-<%= form_tag save_settings_admin_membership_emails_path, :method => 'put' do %>
+<%= form_tag save_settings_admin_memberships_path, :method => 'put' do %>
   <div id="dialog_main">
+    <%= render :partial => 'settings_signup' %>
+    <%= render :partial => 'settings_groups' %>
     <%= render :partial => 'settings_email_delivery' %>
     <%= render :partial => 'settings_admin_notification' %>
   </div>
