Image dialog and WYMEditor patches: save image id and resizing options as data attributes of the IMG tag

--- a/app/views/admin/membership_email_parts/_form.html.erb
+++ b/app/views/admin/membership_email_parts/_form.html.erb
@@ -26,3 +26,6 @@
 <% content_for :after_javascript_libraries do %>
   <%= javascript_include_tag 'custom_wym_options' %>
 <% end %>
+<% content_for :javascripts do %>
+  <%= javascript_include_tag 'wym_monkeypatches' %>
+<% end %>
